--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,11 +1,11 @@
 ---
 layout: archive
-title: "Volunteering and Teaching"
+title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
 
-<h1>Volunteering and Teaching</h1>
+<h1>Teaching</h1>
 <ul>
   {% for teaching in site.teaching %}
     <li>
